--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "embla-carousel-react": "^8.1.7",
     "framer-motion": "^11.3.21",
     "lucide-react": "^0.417.0",
+    "motion": "^12.4.7",
     "next": "14.2.7",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
